Fix searchbar styling on iOS

--- a/packages/lightwallet/mobile/src/app/transact/send/send.scss
+++ b/packages/lightwallet/mobile/src/app/transact/send/send.scss
@@ -1,3 +1,20 @@
+// *** IOS ***
+.ios view-send {
+  ion-searchbar.searchbar-ios {
+    background: transparent;
+    display: initial;
+    .searchbar-input-container {
+      border: 1px solid rgba(0,0,0,0.2);
+      border-radius: 4px;
+      overflow: hidden;
+    }
+  }
+
+  button[ion-button].scan-button {
+    margin: 2px 8px 0 0;
+  }
+}
+
 view-send {
   .global-search-button {
     height: 40px;
